--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "node index"
+        "dev": "nodemon ./index.js localhost 3000"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "body-parser": "^1.20.0",
         "express": "^4.18.1",
-        "mongoose": "^6.6.4"
+        "mongoose": "^6.6.4",
+        "nodemon": "^2.0.20"
     }
 }
